# agentforge

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  deploy.yml
api/: config.py
api/db/: __init__.py  cache.py
api/models/: __init__.py
api/routes/: __init__.py
frontend/: .env.production  index.html  vercel.json
frontend/src/: App.jsx  api.js  hooks.js  index.css
frontend/src/components/: Sidebar.jsx
frontend/src/pages/: AgentDetail.jsx  Agents.jsx  Dashboard.jsx  Runs.jsx
grafana/dashboards/: overview.json
grafana/provisioning/dashboards/: dashboard.yml
k8s/: agentforge.yml
observability/: __init__.py  metrics.py  prometheus.yml
runtime/: __main__.py  engine.py  worker.py
runtime/llm/: __init__.py  providers.py
tests/: conftest.py  test_api.py
tools/: __init__.py  calculator.py  web_search.py
